# LInterpreter

./: .gitignore  CMakeLists.txt  README.md  interpreter.sln  test.l
Oleksii/: CMakeLists.txt  gInterpreter.cpp  gInterpreter.h  main.cpp
TestBoost/: CMakeLists.txt
Vitaliy/: CMakeLists.txt  main.cpp
VitaliyG/: CMakeLists.txt  gInterpreter.cpp  gInterpreter.h  main.cpp
build-Oleksii-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Oleksii-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-175720a0f310494f0497.json  cmakeFiles-v1-b3002f44d170a0809fab.json  codemodel-v2-fccc7d3e37610de508c1.json  directory-.-Debug-46e91c0c767c12d9a380.json  index-2023-07-18T20-11-46-0995.json  target-Oleksii-Debug-a93d40b5ce76e4c714e7.json  target-Oleksii_autogen-Debug-58e2253ba8123df587fd.json  target-Oleksii_autogen_timestamp_deps-Debug-926e3103bf33bd42765a.json
build-Oleksii-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-Oleksii-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-Oleksii-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: basic_string.tcc.4EF75573B7A58625.idx  localefwd.h.D670E8AF8022AE56.idx  main.cpp.A4077C66B0A4AF6F.idx  mainwindow.cpp.14EA3FB9C2931155.idx  qflags.h.DD1C0FD081EEF471.idx  (+6 more)
build-Vitaliy-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Vitaliy-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-Vitaliy-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-VitaliyG-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-VitaliyG-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-VitaliyG-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-VitaliyG-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/VitaliyG_autogen/: deps
build-VitaliyG-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/VitaliyG_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
interpreter/: LInterpreter.cpp  LInterpreter.h  Log.h  Parser.h  SExpr.h  Scanner.h  interpreter.cpp  interpreter.vcxproj  interpreter.vcxproj.filters  pseudoTable.cpp
interpreter/x64/Debug/: interpreter.exe.recipe  interpreter.ilk  linterpreter.obj.enc  vc143.idb
interpreter/x64/Debug/interpreter.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  interpreter.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
(+554 files in other folders)
